Use 'List.of' factory methods.